objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Business_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The business objective this project helps to achieve.</inlineHelpText>
        <label>Business Objective</label>
        <referenceTo>Business_Objective__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Error__c</fullName>
        <description>Stores any JIRA integration errors</description>
        <label>JIRA error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Integrate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this record will get picked up by the JIRA integration.</description>
        <inlineHelpText>When checked, this record will get picked up by the JIRA integration.</inlineHelpText>
        <label>JIRA Integrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA_Key__c</fullName>
        <description>The unique project key in JIRA</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique project key in JIRA</inlineHelpText>
        <label>JIRA Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Last_Sync_Time__c</fullName>
        <label>JIRA Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>